// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnChooserContent should render with custom column chooser component 1`] = `
<div
  className="theme-tc-column-chooser tc-column-chooser"
  id="myId-column-chooser-content"
>
  <RichLayout
    Content={
      <div>
        my body
      </div>
    }
    Footer={
      <div>
        my footer
      </div>
    }
    Header={
      <div>
        my header
      </div>
    }
  />
</div>
`;

exports[`ColumnChooserContent should render with default column chooser component 1`] = `
<div
  className="theme-tc-column-chooser tc-column-chooser"
  id="myId-column-chooser-content"
>
  <RichLayout
    Content={
      <DefaultBody
        columns={Array []}
        onBlurOrder={[MockFunction]}
        onChangeVisibility={[MockFunction]}
        onKeyPressOrder={[MockFunction]}
        t={[MockFunction]}
      />
    }
    Footer={
      <DefaultFooter
        onSelectAll={[MockFunction]}
        selectAllValue={false}
        submit={[MockFunction]}
        t={[MockFunction]}
      />
    }
    Header={
      <DefaultHeader
        t={[MockFunction]}
      />
    }
  />
</div>
`;
